--- a/.github/workflows/on-this-day.yml
+++ b/.github/workflows/on-this-day.yml
@@ -77,16 +77,16 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
 
       - name: Convertir HTML a PDF
-        uses: mikeal/html-pdf-action@v1
-        with:
-          url: ${{ matrix.event.pages[0].content_urls.desktop.page }}
-          output: event.pdf
-
-      - name: Subir artefacto PDF
         uses: misaelnieto/web_to_pdf_action@v0.3.1
         with:
           webPageURL: ${{ matrix.event.pages[0].content_urls.desktop.page }}
           outputFile: ./event.pdf
           usePuppeteer: true
           useScreen: true
+
+      - name: Subir artefacto PDF
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.inputs.month }}-${{ github.event.inputs.day }}-${{ steps.extract.outputs.title }}
+          path: output.pdf
           retention-days: 1
