--- a/.github/workflows/on-this-day.yml
+++ b/.github/workflows/on-this-day.yml
@@ -77,13 +77,11 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
 
       - name: Convertir HTML a PDF
-        uses: misaelnieto/web_to_pdf_action@v0.3.1
+        uses: markwilson/html2pdf@v1.0
         with:
-          webPageURL: ${{ matrix.event.pages[0].content_urls.desktop.page }}
-          outputFile: ./event.pdf
-          usePuppeteer: true
-          useScreen: true
-
+          htmlPath: ${{ matrix.event.pages[0].content_urls.desktop.page }}
+          pdfName: output.pdf
+          
       - name: Subir artefacto PDF
         uses: actions/upload-artifact@v4
         with:
