--- a/.github/workflows/on-this-day.yml
+++ b/.github/workflows/on-this-day.yml
@@ -77,10 +77,10 @@ jobs:
           echo "url=$URL" >> $GITHUB_OUTPUT
 
       - name: Convertir HTML a PDF
-        uses: markwilson/html2pdf@v1.0
+        uses: narthanaj/html-to-pdf-action@v1
         with:
-          htmlPath: ${{ matrix.event.pages[0].content_urls.desktop.page }}
-          pdfName: output.pdf
+          source: ${{ matrix.event.pages[0].content_urls.desktop.page }}
+          output: output.pdf
           
       - name: Subir artefacto PDF
         uses: actions/upload-artifact@v4
